--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,26 @@
-version: '3.9'
-
 services:
-  postgres:
-    image: postgres:latest
-    container_name: alumniregistration
-    restart: always
-    environment:
-      POSTGRES_USER: alumni
-      POSTGRES_PASSWORD: secpass
-      POSTGRES_DB: alumniregistration
+  db:
+    image: postgres:15
     ports:
       - "5432:5432"
+    environment:
+      POSTGRES_DB: alumniregistration
+      POSTGRES_USER: alumni
+      POSTGRES_PASSWORD: secpass
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
 
-  backend:
-    build: ./
-    container_name: nest_backend
-    depends_on:
-      - postgres
+  app:
+    build: .
     ports:
       - "5000:5000"
-    environment:
-      DATABASE_URL: postgresql://alumni:secpass@postgres:5432/alumniregistration
-    volumes:
-      - ./:/app
-      - /app/node_modules
-    env_file:
-      - .env
-    command: >
-      sh -c "until pg_isready -h postgres -p 5432; do sleep 2; done &&
-      npx prisma migrate deploy &&
-      yarn start"
+    depends_on:
+      - db
+    command: sh -c "npx prisma migrate deploy && node dist/src/main.js"
+
+
+networks:
+  bridge: {}
 
 volumes:
-  postgres_data:
+  pgdata:
